settings page rough draft

--- a/css/main.css
+++ b/css/main.css
@@ -960,7 +960,60 @@ textarea:-ms-input-placeholder {
   color: #bdc3c7;
 }
 
-/* line 384, main.scss */
+/* line 381, main.scss */
+progress {
+  width: 100%;
+  background-color: #ECF0F1;
+  border: none;
+  height: 1.5em;
+  border-radius: 2px;
+}
+
+/* line 389, main.scss */
+progress::-webkit-progress-bar {
+  background-color: #ECF0F1;
+  border-radius: 2px;
+}
+
+/* line 393, main.scss */
+progress::-webkit-progress-value {
+  background: #15BDED;
+  border-radius: 2px;
+}
+
+/* line 397, main.scss */
+progress::-moz-progress-bar {
+  background: #15BDED;
+  border-radius: 2px;
+}
+
+/* line 401, main.scss */
+.localNav {
+  border-bottom: 2px solid #ecf0f1;
+  border-top: 2px solid #ecf0f1;
+  display: block;
+  list-style: none;
+  margin-top: 1.5em;
+  margin-bottom: 1.875em;
+}
+/* line 409, main.scss */
+.localNav li {
+  font-weight: bold;
+  display: inline-block;
+  overflow: visible;
+  padding: 0.625em 0.9375em;
+}
+/* line 415, main.scss */
+.localNav li a, .localNav li a:visited {
+  color: #34495e;
+  border-bottom: none;
+}
+/* line 421, main.scss */
+.localNav li.active a {
+  color: #15bded;
+}
+
+/* line 428, main.scss */
 #wrap {
   background-color: white;
   margin-left: 11.25em;
@@ -970,14 +1023,15 @@ textarea:-ms-input-placeholder {
   position: relative;
 }
 
-/* line 393, main.scss */
+/* line 437, main.scss */
 #content {
   background-color: white;
-  padding: 3em 2.5em;
+  padding: 2.625em 2.5em;
+  padding-right: 3.75em;
   margin-top: 3.75em;
 }
 
-/* line 400, main.scss */
+/* line 445, main.scss */
 #mainNav {
   position: fixed;
   top: 0;
@@ -989,13 +1043,13 @@ textarea:-ms-input-placeholder {
   z-index: 200;
   transition: all .2s ease-in-out;
 }
-/* line 410, main.scss */
+/* line 455, main.scss */
 #mainNav .logo {
   width: 11.25em;
   height: 100%;
   display: inline-block;
 }
-/* line 415, main.scss */
+/* line 460, main.scss */
 #mainNav .logo img {
   position: relative;
   top: .5em;
@@ -1003,22 +1057,22 @@ textarea:-ms-input-placeholder {
   padding-top: 0.5625em;
   height: 2.25em;
 }
-/* line 424, main.scss */
+/* line 469, main.scss */
 #mainNav .search {
   margin-left: 2.5em;
   position: relative;
 }
-/* line 428, main.scss */
+/* line 473, main.scss */
 #mainNav .search input {
   width: 30%;
   min-width: 22.5em;
   border: 2px solid #a3e5f8;
 }
-/* line 434, main.scss */
+/* line 479, main.scss */
 #mainNav .search input:focus {
   border: 2px solid #0f99c0;
 }
-/* line 438, main.scss */
+/* line 483, main.scss */
 #mainNav .search .inputLink {
   position: absolute;
   right: 2.75em;
@@ -1026,60 +1080,60 @@ textarea:-ms-input-placeholder {
   color: #34495e;
   font-weight: normal;
 }
-/* line 446, main.scss */
+/* line 491, main.scss */
 #mainNav .search .icon {
   position: absolute;
   right: 0.7em;
   line-height: 2.9em;
 }
-/* line 452, main.scss */
+/* line 497, main.scss */
 #mainNav .search .inputLink {
   line-height: 3.75em;
 }
-/* line 456, main.scss */
+/* line 501, main.scss */
 #mainNav .search .inputLink:hover, #mainNav .search .icon:hover {
   opacity: .5;
 }
-/* line 461, main.scss */
+/* line 506, main.scss */
 #mainNav ul {
   display: inline-block;
   float: right;
   margin-right: 2.5em;
 }
-/* line 466, main.scss */
+/* line 511, main.scss */
 #mainNav ul .icon {
   position: relative;
   margin-left: 0.2em;
 }
-/* line 471, main.scss */
+/* line 516, main.scss */
 #mainNav ul li {
   display: inline-block;
   line-height: 3.75em;
   color: #34495e;
 }
-/* line 477, main.scss */
+/* line 522, main.scss */
 #mainNav ul li a {
   border: none;
   font-weight: bold;
   color: inherit;
   padding: 0 1.25em;
 }
-/* line 485, main.scss */
+/* line 530, main.scss */
 #mainNav ul li:hover {
   background-color: #74d8f4;
 }
 
-/* line 494, main.scss */
+/* line 539, main.scss */
 #mainNav.slideUp {
   top: -3.75em;
 }
 
-/* line 498, main.scss */
+/* line 543, main.scss */
 #mainNav.slideDown {
   top: 0;
 }
 
-/* line 502, main.scss */
+/* line 547, main.scss */
 #sideNav {
   overflow-y: auto;
   background-color: #ecf0f1;
@@ -1091,34 +1145,30 @@ textarea:-ms-input-placeholder {
   padding-top: 3.75em;
   z-index: 100;
 }
-/* line 513, main.scss */
+/* line 558, main.scss */
 #sideNav li {
   font-size: 1em;
   line-height: 3.75em;
   color: #95a5a6;
 }
-/* line 518, main.scss */
+/* line 563, main.scss */
 #sideNav li a {
   padding: 0 1.25em;
   border: none;
   font-weight: bold;
   color: inherit;
 }
-/* line 526, main.scss */
+/* line 571, main.scss */
 #sideNav li.selected {
   color: #34495e;
 }
-/* line 530, main.scss */
+/* line 575, main.scss */
 #sideNav li:hover {
   background-color: rgba(189, 195, 199, 0.3);
   color: #34495e;
 }
-/* line 535, main.scss */
+/* line 580, main.scss */
 #sideNav .icon {
+  padding-right: 0.4em;
   color: inherit;
-  padding-left: 1em;
-}
-/* line 540, main.scss */
-#sideNav .icon + a {
-  padding-left: 0.4em;
 }
