--- a/css/_fonts.scss
+++ b/css/_fonts.scss
@@ -46,14 +46,38 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
+.panjiva-icon-help:before {
+	content: "\e65c";
+}
+.panjiva-icon-contact-lg:before {
+	content: "\e601";
+}
+.panjiva-icon-tools-lg:before {
+	content: "\e602";
+}
+.panjiva-icon-search-lg:before {
+	content: "\e603";
+}
+.panjiva-icon-mail-lg:before {
+	content: "\e604";
+}
+.panjiva-icon-company-search-lg:before {
+	content: "\e605";
+}
+.panjiva-icon-shipments-lg:before {
+	content: "\e606";
+}
+.panjiva-icon-factory-lg:before {
+	content: "\e607";
+}
+.panjiva-icon-add-user:before {
+	content: "\e608";
+}
 .panjiva-icon-right-double:before {
 	content: "\e609";
 }
 .panjiva-icon-left-double:before {
 	content: "\e60a";
-}
-.panjiva-icon-left-circle:before {
-	content: "\e60b";
 }
 .panjiva-icon-left:before {
 	content: "\e60c";
@@ -79,11 +103,62 @@
 .panjiva-icon-x-circle:before {
 	content: "\e613";
 }
+.panjiva-icon-x:before {
+	content: "\e614";
+}
+.panjiva-icon-check-circle:before {
+	content: "\e615";
+}
+.panjiva-icon-check:before {
+	content: "\e616";
+}
+.panjiva-icon-plus:before {
+	content: "\e618";
+}
+.panjiva-icon-maximize:before {
+	content: "\e619";
+}
+.panjiva-icon-minimize:before {
+	content: "\e61a";
+}
+.panjiva-icon-info:before {
+	content: "\e61b";
+}
+.panjiva-icon-exclamation:before {
+	content: "\e61c";
+}
+.panjiva-icon-question-mark:before {
+	content: "\e61d";
+}
 .panjiva-icon-key:before {
 	content: "\e61e";
 }
 .panjiva-icon-unlock:before {
 	content: "\e61f";
+}
+.panjiva-icon-lock:before {
+	content: "\e620";
+}
+.panjiva-icon-cloud-download:before {
+	content: "\e621";
+}
+.panjiva-icon-cloud-upload:before {
+	content: "\e622";
+}
+.panjiva-icon-flag:before {
+	content: "\e624";
+}
+.panjiva-icon-briefcase:before {
+	content: "\e625";
+}
+.panjiva-icon-database:before {
+	content: "\e626";
+}
+.panjiva-icon-cart:before {
+	content: "\e627";
+}
+.panjiva-icon-group:before {
+	content: "\e628";
 }
 .panjiva-icon-user:before {
 	content: "\e629";
@@ -91,11 +166,65 @@
 .panjiva-icon-moon:before {
 	content: "\e62a";
 }
+.panjiva-icon-sun:before {
+	content: "\e62b";
+}
+.panjiva-icon-umbrella:before {
+	content: "\e62c";
+}
+.panjiva-icon-anchor:before {
+	content: "\e62d";
+}
+.panjiva-icon-trash:before {
+	content: "\e62e";
+}
+.panjiva-icon-gift:before {
+	content: "\e630";
+}
+.panjiva-icon-heart:before {
+	content: "\e631";
+}
+.panjiva-icon-link:before {
+	content: "\e632";
+}
+.panjiva-icon-star:before {
+	content: "\e633";
+}
+.panjiva-icon-paperclip:before {
+	content: "\e634";
+}
 .panjiva-icon-location:before {
 	content: "\e635";
 }
 .panjiva-icon-search:before {
 	content: "\e636";
+}
+.panjiva-icon-lightbulb:before {
+	content: "\e637";
+}
+.panjiva-icon-settings:before {
+	content: "\e638";
+}
+.panjiva-icon-compose:before {
+	content: "\e639";
+}
+.panjiva-icon-clock:before {
+	content: "\e63a";
+}
+.panjiva-icon-id:before {
+	content: "\e63c";
+}
+.panjiva-icon-contacts:before {
+	content: "\e63d";
+}
+.panjiva-icon-megaphone:before {
+	content: "\e63e";
+}
+.panjiva-icon-calling:before {
+	content: "\e63f";
+}
+.panjiva-icon-call:before {
+	content: "\e640";
 }
 .panjiva-icon-microphone-no:before {
 	content: "\e641";
@@ -103,169 +232,43 @@
 .panjiva-icon-microphone:before {
 	content: "\e642";
 }
-.panjiva-icon-home:before {
-	content: "\e64e";
-}
-.panjiva-icon-mail:before {
-	content: "\e64d";
-}
-.panjiva-icon-upload:before {
-	content: "\e64f";
-}
-.panjiva-icon-building-lg:before {
-	content: "\e600";
-}
-.panjiva-icon-bank:before {
-	content: "\e64b";
-}
-.panjiva-icon-web:before {
-	content: "\e64a";
-}
-.panjiva-icon-folder:before {
-	content: "\e649";
-}
-.panjiva-icon-comment:before {
-	content: "\e648";
-}
-.panjiva-icon-graph:before {
-	content: "\e647";
-}
-.panjiva-icon-print:before {
-	content: "\e646";
-}
-.panjiva-icon-clipboard:before {
-	content: "\e645";
+.panjiva-icon-photo:before {
+	content: "\e643";
 }
 .panjiva-icon-paper:before {
 	content: "\e644";
 }
-.panjiva-icon-photo:before {
-	content: "\e643";
+.panjiva-icon-clipboard:before {
+	content: "\e645";
 }
-.panjiva-icon-calling:before {
-	content: "\e63f";
+.panjiva-icon-print:before {
+	content: "\e646";
 }
-.panjiva-icon-megaphone:before {
-	content: "\e63e";
+.panjiva-icon-comment:before {
+	content: "\e648";
 }
-.panjiva-icon-contacts:before {
-	content: "\e63d";
+.panjiva-icon-folder:before {
+	content: "\e649";
 }
-.panjiva-icon-id:before {
-	content: "\e63c";
+.panjiva-icon-globe:before {
+	content: "\e64a";
 }
-.panjiva-icon-calendar:before {
-	content: "\e63b";
-}
-.panjiva-icon-clock:before {
-	content: "\e63a";
-}
-.panjiva-icon-compose:before {
-	content: "\e639";
-}
-.panjiva-icon-settings:before {
-	content: "\e638";
-}
-.panjiva-icon-lightbulb:before {
-	content: "\e637";
-}
-.panjiva-icon-star:before {
-	content: "\e633";
-}
-.panjiva-icon-link:before {
-	content: "\e632";
-}
-.panjiva-icon-heart:before {
-	content: "\e631";
-}
-.panjiva-icon-gift:before {
-	content: "\e630";
-}
-.panjiva-icon-shirt:before {
-	content: "\e62f";
-}
-.panjiva-icon-trash:before {
-	content: "\e62e";
-}
-.panjiva-icon-anchor:before {
-	content: "\e62d";
-}
-.panjiva-icon-umbrella:before {
-	content: "\e62c";
-}
-.panjiva-icon-sun:before {
-	content: "\e62b";
-}
-.panjiva-icon-group:before {
-	content: "\e628";
-}
-.panjiva-icon-cart:before {
-	content: "\e627";
-}
-.panjiva-icon-database:before {
-	content: "\e626";
-}
-.panjiva-icon-briefcase:before {
-	content: "\e625";
-}
-.panjiva-icon-flag:before {
-	content: "\e624";
-}
-.panjiva-icon-undo:before {
-	content: "\e623";
-}
-.panjiva-icon-cloud-upload:before {
-	content: "\e622";
-}
-.panjiva-icon-cloud-download:before {
-	content: "\e621";
-}
-.panjiva-icon-lock:before {
-	content: "\e620";
-}
-.panjiva-icon-exclamation:before {
-	content: "\e61c";
-}
-.panjiva-icon-info:before {
-	content: "\e61b";
-}
-.panjiva-icon-minimize:before {
-	content: "\e61a";
-}
-.panjiva-icon-maximize:before {
-	content: "\e619";
-}
-.panjiva-icon-add:before {
-	content: "\e618";
-}
-.panjiva-icon-add-circle:before {
-	content: "\e617";
-}
-.panjiva-icon-check:before {
-	content: "\e616";
-}
-.panjiva-icon-check-circle:before {
-	content: "\e615";
-}
-.panjiva-icon-x:before {
-	content: "\e614";
-}
-.panjiva-icon-question:before {
-	content: "\e61d";
-}
-.panjiva-icon-add-user:before {
-	content: "\e608";
-}
-.panjiva-icon-paperclip:before {
-	content: "\e634";
-}
-.panjiva-icon-call:before {
-	content: "\e640";
+.panjiva-icon-bank:before {
+	content: "\e64b";
 }
 .panjiva-icon-building:before {
 	content: "\e64c";
 }
+.panjiva-icon-mail:before {
+	content: "\e64d";
+}
+.panjiva-icon-home:before {
+	content: "\e64e";
+}
 .panjiva-icon-download:before {
+	content: "\e64f";
+}
+.panjiva-icon-upload:before {
 	content: "\e650";
 }
 .panjiva-icon-wechat:before {
@@ -276,6 +279,27 @@
 }
 .panjiva-icon-twitter:before {
 	content: "\e653";
+}
+.panjiva-icon-graph:before {
+	content: "\e647";
+}
+.panjiva-icon-calendar:before {
+	content: "\e63b";
+}
+.panjiva-icon-shirt:before {
+	content: "\e62f";
+}
+.panjiva-icon-undo:before {
+	content: "\e623";
+}
+.panjiva-icon-plus-circle:before {
+	content: "\e617";
+}
+.panjiva-icon-left-circle:before {
+	content: "\e60b";
+}
+.panjiva-icon-building-lg:before {
+	content: "\e600";
 }
 .panjiva-icon-rss:before {
 	content: "\e654";
@@ -300,25 +324,4 @@
 }
 .panjiva-icon-baidu:before {
 	content: "\e65b";
-}
-.panjiva-icon-shipments-lg:before {
-	content: "\e606";
-}
-.panjiva-icon-contact-lg:before {
-	content: "\e601";
-}
-.panjiva-icon-mail-lg:before {
-	content: "\e604";
-}
-.panjiva-icon-factory-lg:before {
-	content: "\e607";
-}
-.panjiva-icon-tools-lg:before {
-	content: "\e602";
-}
-.panjiva-icon-search-lg:before {
-	content: "\e603";
-}
-.panjiva-icon-company-search-lg:before {
-	content: "\e605";
 }
