--- a/css/main.scss
+++ b/css/main.scss
@@ -398,6 +398,14 @@ progress::-moz-progress-bar{
 	background:#15BDED;border-radius:2px
 }
 
+fieldset {
+	label, .label {
+		display: inline-block;
+		font-weight: bold;
+		margin-bottom: 4px;
+	}
+}
+
 .localNav {
 	border-bottom: 2px solid $gray1;
 	border-top: 2px solid $gray1;
@@ -424,6 +432,57 @@ progress::-moz-progress-bar{
 }
 
 // Icons
+.iconBlock {
+	background-color: $gray1;
+	height: 60px;
+	width: 60px;
+	border-radius: 3px;
+	padding: 10px;
+	font-size: 40px;
+}
+
+.iconBlock.disabled {
+	background-color: none;
+	color: $gray2;
+	border: 2px solid $gray2;
+	padding: 8px;
+}
+
+// Table
+
+table {
+	width: 100%;
+	border-collapse: collapse;
+	border-color: none;
+
+	thead td {
+		font-weight: bold;
+	}
+
+	td, th {
+		word-wrap: break-word;
+		border-left: 2px solid #ECF0F1;
+		padding: 24px 20px;
+		vertical-align: middle;
+	}
+
+	tr {
+  		border-bottom: 2px solid #ECF0F1;
+	}
+
+	td:first-of-type, tr:first-of-type {
+		border-left: none;
+	}
+
+	tr:last-of-type {
+		border-bottom: none;
+	}
+
+	tr.focus {
+		background-color: $gray1;
+	}
+}
+
 
 #wrap {
 	background-color: $white;
