fixes and additions to styleguide

--- a/css/main.css
+++ b/css/main.css
@@ -900,7 +900,7 @@ button.buttonLink:hover, button.buttonLink:active {
 
 /* line 332, main.scss */
 textarea, input[type="text"], input[type="password"], input[type="file"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"] {
-  display: inline-block;
+  display: block;
   padding: 0 0.625em;
   border-radius: 0.3125em;
   min-width: 3.75em;
@@ -968,7 +968,7 @@ textarea:-ms-input-placeholder {
 /* line 381, main.scss */
 progress {
   width: 100%;
-  background-color: #ECF0F1;
+  background-color: #ecf0f1;
   border: none;
   height: 1.5em;
   border-radius: 2px;
@@ -976,30 +976,30 @@ progress {
 
 /* line 389, main.scss */
 progress::-webkit-progress-bar {
-  background-color: #ECF0F1;
+  background-color: #ecf0f1;
   border-radius: 2px;
 }
 
-/* line 393, main.scss */
+/* line 394, main.scss */
 progress::-webkit-progress-value {
-  background: #15BDED;
+  background: #15bded;
   border-radius: 2px;
 }
 
-/* line 397, main.scss */
+/* line 399, main.scss */
 progress::-moz-progress-bar {
-  background: #15BDED;
+  background: #15bded;
   border-radius: 2px;
 }
 
-/* line 402, main.scss */
+/* line 405, main.scss */
 fieldset label, fieldset .label {
   display: inline-block;
   font-weight: bold;
-  margin-bottom: 4px;
+  margin-bottom: 0.25em;
 }
 
-/* line 409, main.scss */
+/* line 412, main.scss */
 .localNav {
   border-bottom: 2px solid #ecf0f1;
   border-top: 2px solid #ecf0f1;
@@ -1008,76 +1008,86 @@ fieldset label, fieldset .label {
   margin-top: 1.5em;
   margin-bottom: 1.875em;
 }
-/* line 417, main.scss */
+/* line 420, main.scss */
 .localNav li {
   font-weight: bold;
   display: inline-block;
   overflow: visible;
   padding: 0.625em 0.9375em;
 }
-/* line 423, main.scss */
+/* line 426, main.scss */
 .localNav li a, .localNav li a:visited {
   color: #34495e;
   border-bottom: none;
 }
-/* line 429, main.scss */
+/* line 431, main.scss */
+.localNav li a:hover, .localNav li a:visited:hover, .localNav li a:active {
+  color: #98afc6;
+}
+/* line 436, main.scss */
 .localNav li.active a {
   color: #15bded;
 }
 
-/* line 435, main.scss */
+/* line 442, main.scss */
 .iconBlock {
   background-color: #ecf0f1;
-  height: 60px;
-  width: 60px;
   border-radius: 3px;
-  padding: 10px;
-  font-size: 40px;
+  padding: 0.3em;
+  font-size: 1.875em;
 }
 
-/* line 444, main.scss */
+/* line 449, main.scss */
 .iconBlock.disabled {
   background-color: none;
   color: #bdc3c7;
   border: 2px solid #bdc3c7;
-  padding: 8px;
+  padding: 0.23333333333333em;
 }
 
-/* line 453, main.scss */
+/* line 458, main.scss */
 table {
   width: 100%;
   border-collapse: collapse;
   border-color: none;
 }
-/* line 458, main.scss */
+/* line 463, main.scss */
+table thead {
+  background-color: #ecf0f1;
+}
+/* line 467, main.scss */
 table thead td {
   font-weight: bold;
 }
-/* line 462, main.scss */
+/* line 471, main.scss */
 table td, table th {
   word-wrap: break-word;
-  border-left: 2px solid #ECF0F1;
-  padding: 24px 20px;
+  border-left: 2px solid #ecf0f1;
+  padding: 0.6875em 1.25em;
   vertical-align: middle;
 }
-/* line 469, main.scss */
+/* line 478, main.scss */
 table tr {
-  border-bottom: 2px solid #ECF0F1;
+  border-bottom: 2px solid #ecf0f1;
 }
-/* line 473, main.scss */
+/* line 482, main.scss */
 table td:first-of-type, table tr:first-of-type {
   border-left: none;
 }
-/* line 477, main.scss */
+/* line 486, main.scss */
 table tr:last-of-type {
   border-bottom: none;
 }
-/* line 481, main.scss */
+/* line 490, main.scss */
 table tr.focus {
-  background-color: #ecf0f1;
+  background-color: #fcf3d0;
+}
+/* line 493, main.scss */
+table tr.focus td, table tr.focus th {
+  border-color: #fcf3d0;
 }
 
-/* line 487, main.scss */
+/* line 500, main.scss */
 #wrap {
   background-color: white;
   margin-left: 11.25em;
@@ -1087,7 +1097,7 @@ table tr.focus {
   position: relative;
 }
 
-/* line 496, main.scss */
+/* line 509, main.scss */
 #content {
   background-color: white;
   padding: 2.625em 2.5em;
@@ -1095,7 +1105,7 @@ table tr.focus {
   margin-top: 3.75em;
 }
 
-/* line 504, main.scss */
+/* line 517, main.scss */
 #mainNav {
   position: fixed;
   top: 0;
@@ -1107,13 +1117,13 @@ table tr.focus {
   z-index: 200;
   transition: all .2s ease-in-out;
 }
-/* line 514, main.scss */
+/* line 527, main.scss */
 #mainNav .logo {
   width: 11.25em;
   height: 100%;
   display: inline-block;
 }
-/* line 519, main.scss */
+/* line 532, main.scss */
 #mainNav .logo img {
   position: relative;
   top: .5em;
@@ -1121,22 +1131,23 @@ table tr.focus {
   padding-top: 0.5625em;
   height: 2.25em;
 }
-/* line 528, main.scss */
+/* line 541, main.scss */
 #mainNav .search {
   margin-left: 2.5em;
   position: relative;
 }
-/* line 532, main.scss */
+/* line 545, main.scss */
 #mainNav .search input {
+  display: inline-block;
   width: 30%;
   min-width: 22.5em;
   border: 2px solid #a3e5f8;
 }
-/* line 538, main.scss */
+/* line 552, main.scss */
 #mainNav .search input:focus {
   border: 2px solid #0f99c0;
 }
-/* line 542, main.scss */
+/* line 556, main.scss */
 #mainNav .search .inputLink {
   position: absolute;
   right: 2.75em;
@@ -1144,60 +1155,60 @@ table tr.focus {
   color: #34495e;
   font-weight: normal;
 }
-/* line 550, main.scss */
+/* line 564, main.scss */
 #mainNav .search .icon {
   position: absolute;
   right: 0.7em;
   line-height: 2.9em;
 }
-/* line 556, main.scss */
+/* line 570, main.scss */
 #mainNav .search .inputLink {
   line-height: 3.75em;
 }
-/* line 560, main.scss */
+/* line 574, main.scss */
 #mainNav .search .inputLink:hover, #mainNav .search .icon:hover {
-  opacity: .5;
+  color: #98afc6;
 }
-/* line 565, main.scss */
+/* line 579, main.scss */
 #mainNav ul {
   display: inline-block;
   float: right;
   margin-right: 2.5em;
 }
-/* line 570, main.scss */
+/* line 584, main.scss */
 #mainNav ul .icon {
   position: relative;
   margin-left: 0.2em;
 }
-/* line 575, main.scss */
+/* line 589, main.scss */
 #mainNav ul li {
   display: inline-block;
   line-height: 3.75em;
   color: #34495e;
 }
-/* line 581, main.scss */
+/* line 595, main.scss */
 #mainNav ul li a {
   border: none;
   font-weight: bold;
   color: inherit;
   padding: 0 1.25em;
 }
-/* line 589, main.scss */
+/* line 603, main.scss */
 #mainNav ul li:hover {
   background-color: #74d8f4;
 }
 
-/* line 598, main.scss */
+/* line 612, main.scss */
 #mainNav.slideUp {
   top: -3.75em;
 }
 
-/* line 602, main.scss */
+/* line 616, main.scss */
 #mainNav.slideDown {
   top: 0;
 }
 
-/* line 606, main.scss */
+/* line 620, main.scss */
 #sideNav {
   overflow-y: auto;
   background-color: #ecf0f1;
@@ -1209,29 +1220,29 @@ table tr.focus {
   padding-top: 3.75em;
   z-index: 100;
 }
-/* line 617, main.scss */
-#sideNav li {
-  font-size: 1em;
-  line-height: 3.75em;
-  color: #95a5a6;
-}
-/* line 622, main.scss */
-#sideNav li a {
-  padding: 0 1.25em;
+/* line 631, main.scss */
+#sideNav a {
   border: none;
   font-weight: bold;
   color: inherit;
 }
-/* line 630, main.scss */
+/* line 638, main.scss */
+#sideNav li {
+  padding: 0 1.25em;
+  font-size: 1em;
+  line-height: 3.75em;
+  color: #95a5a6;
+}
+/* line 645, main.scss */
 #sideNav li.selected {
   color: #34495e;
 }
-/* line 634, main.scss */
+/* line 649, main.scss */
 #sideNav li:hover {
   background-color: rgba(189, 195, 199, 0.3);
   color: #34495e;
 }
-/* line 639, main.scss */
+/* line 654, main.scss */
 #sideNav .icon {
   padding-right: 0.4em;
   color: inherit;
