--- a/css/_styleguide.scss
+++ b/css/_styleguide.scss
@@ -17,8 +17,8 @@
 	margin-bottom: .75em;
 }
 
-#grid .unit p {
-	margin-top: .75em;
+#grid .unit div {
+	margin: .75em 0;
 	background-color: lighten($blueLight, 20%);
 	padding: .75em;
 	text-align: center;
