--- a/css/main.css
+++ b/css/main.css
@@ -531,8 +531,8 @@
 }
 
 /* line 20, _styleguide.scss */
-#grid .unit p {
-  margin-top: .75em;
+#grid .unit div {
+  margin: .75em 0;
   background-color: #74d8f4;
   padding: .75em;
   text-align: center;
@@ -567,11 +567,12 @@ html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pr
 /* line 27, main.scss */
 .section {
   border-top: 2px solid #ecf0f1;
-  padding-top: 1.25em;
-  padding-bottom: 1.25em;
+  padding-top: 1.875em;
+  padding-bottom: 1.875em;
+  margin: 1.875em 0;
 }
 
-/* line 33, main.scss */
+/* line 34, main.scss */
 body {
   background-color: white;
   font-size: 100%;
@@ -588,23 +589,23 @@ body {
   height: inherit;
 }
 
-/* line 52, main.scss */
+/* line 53, main.scss */
 line {
   zoom: 1;
 }
 
-/* line 56, main.scss */
+/* line 57, main.scss */
 .line:before, .line:after {
   content: " ";
   display: table;
 }
 
-/* line 61, main.scss */
+/* line 62, main.scss */
 .line:after {
   clear: both;
 }
 
-/* line 65, main.scss */
+/* line 66, main.scss */
 .unit {
   overflow: hidden;
   -moz-background-clip: padding-box !important;
@@ -614,7 +615,7 @@ line {
   padding-right: 1.5em;
 }
 
-/* line 74, main.scss */
+/* line 75, main.scss */
 .lastUnit {
   overflow: hidden;
   -moz-background-clip: padding-box !important;
@@ -626,97 +627,97 @@ line {
   padding-right: 0;
 }
 
-/* line 85, main.scss */
+/* line 86, main.scss */
 .size8of8 {
   width: 100%;
 }
 
-/* line 89, main.scss */
+/* line 90, main.scss */
 .size7of8 {
   width: 87.5%;
 }
 
-/* line 93, main.scss */
+/* line 94, main.scss */
 .size6of8 {
   width: 75%;
 }
 
-/* line 97, main.scss */
+/* line 98, main.scss */
 .size5of8 {
   width: 62.5%;
 }
 
-/* line 101, main.scss */
+/* line 102, main.scss */
 .size4of8 {
   width: 50%;
 }
 
-/* line 105, main.scss */
+/* line 106, main.scss */
 .size3of8 {
   width: 37.5%;
 }
 
-/* line 109, main.scss */
+/* line 110, main.scss */
 .size2of8 {
   width: 25%;
 }
 
-/* line 113, main.scss */
+/* line 114, main.scss */
 .size1of8 {
   width: 12.5%;
 }
 
-/* line 117, main.scss */
+/* line 118, main.scss */
 .size4of4 {
   width: 100%;
 }
 
-/* line 121, main.scss */
+/* line 122, main.scss */
 .size3of4 {
   width: 75%;
 }
 
-/* line 125, main.scss */
+/* line 126, main.scss */
 .size2of4 {
   width: 50%;
 }
 
-/* line 129, main.scss */
+/* line 130, main.scss */
 .size1of4 {
   width: 25%;
 }
 
-/* line 133, main.scss */
+/* line 134, main.scss */
 .size2of2 {
   width: 100%;
 }
 
-/* line 137, main.scss */
+/* line 138, main.scss */
 .size1of2 {
   width: 50%;
 }
 
-/* line 141, main.scss */
+/* line 142, main.scss */
 .size3of3 {
   width: 100%;
 }
 
-/* line 145, main.scss */
+/* line 146, main.scss */
 .size2of3 {
   width: 66.66666666666666%;
 }
 
-/* line 149, main.scss */
+/* line 150, main.scss */
 .size1of3 {
   width: 33.33333333333333%;
 }
 
-/* line 153, main.scss */
+/* line 154, main.scss */
 .size1of1 {
   width: 100%;
 }
 
-/* line 168, main.scss */
+/* line 169, main.scss */
 .h0 {
   font-family: "Avenir LT W01 85 Heavy", "Helvetica Neue", Arial, sans-serif;
   color: #15bded;
@@ -726,7 +727,7 @@ line {
   margin-bottom: 0.47916666666667em;
 }
 
-/* line 177, main.scss */
+/* line 178, main.scss */
 h1, .h1 {
   font-family: "Avenir LT W01 85 Heavy", "Helvetica Neue", Arial, sans-serif;
   color: #15bded;
@@ -735,7 +736,7 @@ h1, .h1 {
   margin-bottom: 0.5em;
 }
 
-/* line 185, main.scss */
+/* line 186, main.scss */
 h2, .h2 {
   font-family: "Avenir LT W01 85 Heavy", "Helvetica Neue", Arial, sans-serif;
   color: #7f8c8d;
@@ -744,7 +745,7 @@ h2, .h2 {
   margin-bottom: 0.33333333333333em;
 }
 
-/* line 193, main.scss */
+/* line 194, main.scss */
 h3, .h3 {
   font-family: "Avenir LT W01 85 Heavy", "Helvetica Neue", Arial, sans-serif;
   font-size: 1.5em;
@@ -753,7 +754,7 @@ h3, .h3 {
   margin-bottom: 0.58333333333333em;
 }
 
-/* line 201, main.scss */
+/* line 202, main.scss */
 h4, .h4, h5, h6 {
   font-family: "Avenir LT W01 85 Heavy", "Helvetica Neue", Arial, sans-serif;
   font-size: 1.125em;
@@ -761,7 +762,7 @@ h4, .h4, h5, h6 {
   margin-bottom: 1em;
 }
 
-/* line 208, main.scss */
+/* line 209, main.scss */
 .xlarge {
   font-family: "HelveticaNeueW01", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Arial, sans-serif;
   font-size: 1.625em;
@@ -770,7 +771,7 @@ h4, .h4, h5, h6 {
   margin-bottom: 0.34615384615385em;
 }
 
-/* line 216, main.scss */
+/* line 217, main.scss */
 .large {
   font-family: "HelveticaNeueW01", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Arial, sans-serif;
   font-size: 1.25em;
@@ -779,7 +780,7 @@ h4, .h4, h5, h6 {
   margin-bottom: 0.5em;
 }
 
-/* line 224, main.scss */
+/* line 225, main.scss */
 .normal {
   font-family: "HelveticaNeueW01", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Arial, sans-serif;
   font-size: 1em;
@@ -789,32 +790,33 @@ h4, .h4, h5, h6 {
   font-weight: normal;
 }
 
-/* line 233, main.scss */
+/* line 234, main.scss */
 p {
   font-size: 1em;
   line-height: 1.5em;
   margin-bottom: 0.75em;
+  max-width: 37.5em;
 }
 
-/* line 239, main.scss */
+/* line 241, main.scss */
 a, a:visited {
   color: #15bded;
   text-decoration: none;
   font-weight: bold;
 }
 
-/* line 245, main.scss */
+/* line 247, main.scss */
 a:not(.img), a:visited:not(.img) {
   border-bottom: 2px solid;
   color: #15bded;
 }
 
-/* line 250, main.scss */
+/* line 252, main.scss */
 a:hover, a:visited:hover, a:active {
   color: #0b7391;
 }
 
-/* line 255, main.scss */
+/* line 257, main.scss */
 a.anchor {
   display: block;
   position: relative;
@@ -822,7 +824,7 @@ a.anchor {
   visibility: hidden;
 }
 
-/* line 262, main.scss */
+/* line 264, main.scss */
 code, kbd, pre, samp {
   font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
   padding: 0.125em 0.25em;
@@ -833,7 +835,7 @@ code, kbd, pre, samp {
   border-radius: 4px;
 }
 
-/* line 274, main.scss */
+/* line 276, main.scss */
 button {
   height: 2.57142857142857em;
   margin-right: 1.28571428571429em;
@@ -858,29 +860,29 @@ button {
   outline: none;
 }
 
-/* line 298, main.scss */
+/* line 300, main.scss */
 button:hover, button:active {
   background-color: #617374;
   outline: none;
 }
 
-/* line 303, main.scss */
+/* line 305, main.scss */
 button.buttonPrimary {
   background-color: #15bded;
 }
 
-/* line 307, main.scss */
+/* line 309, main.scss */
 button.buttonPrimary:hover, button.buttonPrimary:active {
   background-color: #0b7391;
 }
 
-/* line 311, main.scss */
+/* line 313, main.scss */
 button:disabled {
   background-color: #ecf0f1;
   color: #bdc3c7;
 }
 
-/* line 316, main.scss */
+/* line 318, main.scss */
 button.buttonLink {
   color: #15bded;
   background-color: transparent;
@@ -892,13 +894,20 @@ button.buttonLink {
   margin: 0.64285714285714em 0;
 }
 
-/* line 327, main.scss */
+/* line 329, main.scss */
 button.buttonLink:hover, button.buttonLink:active {
   color: #0b7391;
   border-bottom: 2px solid #0b7391;
 }
 
-/* line 332, main.scss */
+/* line 334, main.scss */
+button.buttonLarge {
+  height: 3em;
+  line-height: 3em;
+  font-size: 1em;
+}
+
+/* line 340, main.scss */
 textarea, input[type="text"], input[type="password"], input[type="file"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"] {
   display: block;
   padding: 0 0.625em;
@@ -911,61 +920,66 @@ textarea, input[type="text"], input[type="password"], input[type="file"], input[
   border: 2px solid #95a5a6;
 }
 
-/* line 344, main.scss */
+/* line 352, main.scss */
 button .icon {
   padding-right: 0.42857142857143em;
   color: inherit;
 }
 
-/* line 349, main.scss */
+/* line 357, main.scss */
+textarea:hover, input[type="text"]:hover, input[type="password"]:hover, input[type="file"]:hover, input[type="datetime"]:hover, input[type="datetime-local"]:hover, input[type="date"]:hover, input[type="month"]:hover, input[type="time"]:hover, input[type="week"]:hover, input[type="number"]:hover, input[type="email"]:hover, input[type="url"]:hover, input[type="search"]:hover, input[type="tel"]:hover, input[type="color"]:hover {
+  border-color: #7f8c8d;
+}
+
+/* line 361, main.scss */
 textarea:focus, input[type="text"]:focus, input[type="password"]:focus, input[type="file"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="date"]:focus, input[type="month"]:focus, input[type="time"]:focus, input[type="week"]:focus, input[type="number"]:focus, input[type="email"]:focus, input[type="url"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="color"]:focus {
   border: 2px solid #15bded;
   outline: none;
 }
 
-/* line 355, main.scss */
+/* line 367, main.scss */
 input::-webkit-input-placeholder {
   color: #bdc3c7;
 }
 
-/* line 358, main.scss */
+/* line 370, main.scss */
 input::-moz-placeholder {
   color: #bdc3c7;
 }
 
-/* line 361, main.scss */
+/* line 373, main.scss */
 input:-moz-placeholder {
   /* Older versions of Firefox */
   color: #bdc3c7;
 }
 
-/* line 364, main.scss */
+/* line 376, main.scss */
 input:-ms-input-placeholder {
   color: #bdc3c7;
 }
 
-/* line 368, main.scss */
+/* line 380, main.scss */
 textarea::-webkit-input-placeholder {
   color: #bdc3c7;
 }
 
-/* line 371, main.scss */
+/* line 383, main.scss */
 textarea::-moz-placeholder {
   color: #bdc3c7;
 }
 
-/* line 374, main.scss */
+/* line 386, main.scss */
 textarea:-moz-placeholder {
   /* Older versions of Firefox */
   color: #bdc3c7;
 }
 
-/* line 377, main.scss */
+/* line 389, main.scss */
 textarea:-ms-input-placeholder {
   color: #bdc3c7;
 }
 
-/* line 381, main.scss */
+/* line 393, main.scss */
 progress {
   width: 100%;
   background-color: #ecf0f1;
@@ -974,32 +988,32 @@ progress {
   border-radius: 2px;
 }
 
-/* line 389, main.scss */
+/* line 401, main.scss */
 progress::-webkit-progress-bar {
   background-color: #ecf0f1;
   border-radius: 2px;
 }
 
-/* line 394, main.scss */
+/* line 406, main.scss */
 progress::-webkit-progress-value {
   background: #15bded;
   border-radius: 2px;
 }
 
-/* line 399, main.scss */
+/* line 411, main.scss */
 progress::-moz-progress-bar {
   background: #15bded;
   border-radius: 2px;
 }
 
-/* line 405, main.scss */
+/* line 417, main.scss */
 fieldset label, fieldset .label {
   display: inline-block;
   font-weight: bold;
   margin-bottom: 0.25em;
 }
 
-/* line 412, main.scss */
+/* line 424, main.scss */
 .localNav {
   border-bottom: 2px solid #ecf0f1;
   border-top: 2px solid #ecf0f1;
@@ -1008,28 +1022,28 @@ fieldset label, fieldset .label {
   margin-top: 1.5em;
   margin-bottom: 1.875em;
 }
-/* line 420, main.scss */
+/* line 432, main.scss */
 .localNav li {
   font-weight: bold;
   display: inline-block;
   overflow: visible;
   padding: 0.625em 0.9375em;
 }
-/* line 426, main.scss */
+/* line 438, main.scss */
 .localNav li a, .localNav li a:visited {
   color: #34495e;
   border-bottom: none;
 }
-/* line 431, main.scss */
+/* line 443, main.scss */
 .localNav li a:hover, .localNav li a:visited:hover, .localNav li a:active {
   color: #98afc6;
 }
-/* line 436, main.scss */
+/* line 448, main.scss */
 .localNav li.active a {
   color: #15bded;
 }
 
-/* line 442, main.scss */
+/* line 454, main.scss */
 .iconBlock {
   background-color: #ecf0f1;
   border-radius: 3px;
@@ -1037,7 +1051,7 @@ fieldset label, fieldset .label {
   font-size: 1.875em;
 }
 
-/* line 449, main.scss */
+/* line 461, main.scss */
 .iconBlock.disabled {
   background-color: none;
   color: #bdc3c7;
@@ -1045,49 +1059,49 @@ fieldset label, fieldset .label {
   padding: 0.23333333333333em;
 }
 
-/* line 458, main.scss */
+/* line 470, main.scss */
 table {
   width: 100%;
   border-collapse: collapse;
   border-color: none;
 }
-/* line 463, main.scss */
+/* line 475, main.scss */
 table thead {
   background-color: #ecf0f1;
 }
-/* line 467, main.scss */
+/* line 479, main.scss */
 table thead td {
   font-weight: bold;
 }
-/* line 471, main.scss */
+/* line 483, main.scss */
 table td, table th {
   word-wrap: break-word;
   border-left: 2px solid #ecf0f1;
   padding: 0.6875em 1.25em;
   vertical-align: middle;
 }
-/* line 478, main.scss */
+/* line 490, main.scss */
 table tr {
   border-bottom: 2px solid #ecf0f1;
 }
-/* line 482, main.scss */
+/* line 494, main.scss */
 table td:first-of-type, table tr:first-of-type {
   border-left: none;
 }
-/* line 486, main.scss */
+/* line 498, main.scss */
 table tr:last-of-type {
   border-bottom: none;
 }
-/* line 490, main.scss */
+/* line 502, main.scss */
 table tr.focus {
   background-color: #fcf3d0;
 }
-/* line 493, main.scss */
+/* line 505, main.scss */
 table tr.focus td, table tr.focus th {
   border-color: #fcf3d0;
 }
 
-/* line 500, main.scss */
+/* line 512, main.scss */
 #wrap {
   background-color: white;
   margin-left: 11.25em;
@@ -1097,7 +1111,7 @@ table tr.focus td, table tr.focus th {
   position: relative;
 }
 
-/* line 509, main.scss */
+/* line 521, main.scss */
 #content {
   background-color: white;
   padding: 2.625em 2.5em;
@@ -1105,7 +1119,7 @@ table tr.focus td, table tr.focus th {
   margin-top: 3.75em;
 }
 
-/* line 517, main.scss */
+/* line 529, main.scss */
 #mainNav {
   position: fixed;
   top: 0;
@@ -1117,13 +1131,13 @@ table tr.focus td, table tr.focus th {
   z-index: 200;
   transition: all .2s ease-in-out;
 }
-/* line 527, main.scss */
+/* line 539, main.scss */
 #mainNav .logo {
   width: 11.25em;
   height: 100%;
   display: inline-block;
 }
-/* line 532, main.scss */
+/* line 544, main.scss */
 #mainNav .logo img {
   position: relative;
   top: .5em;
@@ -1131,23 +1145,27 @@ table tr.focus td, table tr.focus th {
   padding-top: 0.5625em;
   height: 2.25em;
 }
-/* line 541, main.scss */
+/* line 553, main.scss */
 #mainNav .search {
   margin-left: 2.5em;
   position: relative;
 }
-/* line 545, main.scss */
+/* line 557, main.scss */
 #mainNav .search input {
   display: inline-block;
   width: 30%;
   min-width: 22.5em;
   border: 2px solid #a3e5f8;
 }
-/* line 552, main.scss */
-#mainNav .search input:focus {
-  border: 2px solid #0f99c0;
+/* line 564, main.scss */
+#mainNav .search input:hover {
+  border-color: #00a1cf;
 }
-/* line 556, main.scss */
+/* line 567, main.scss */
+#mainNav .search input:focus {
+  border: 2px solid #00799c;
+}
+/* line 571, main.scss */
 #mainNav .search .inputLink {
   position: absolute;
   right: 2.75em;
@@ -1155,60 +1173,60 @@ table tr.focus td, table tr.focus th {
   color: #34495e;
   font-weight: normal;
 }
-/* line 564, main.scss */
+/* line 579, main.scss */
 #mainNav .search .icon {
   position: absolute;
   right: 0.7em;
   line-height: 2.9em;
 }
-/* line 570, main.scss */
+/* line 585, main.scss */
 #mainNav .search .inputLink {
   line-height: 3.75em;
 }
-/* line 574, main.scss */
+/* line 589, main.scss */
 #mainNav .search .inputLink:hover, #mainNav .search .icon:hover {
   color: #98afc6;
 }
-/* line 579, main.scss */
+/* line 594, main.scss */
 #mainNav ul {
   display: inline-block;
   float: right;
   margin-right: 2.5em;
 }
-/* line 584, main.scss */
+/* line 599, main.scss */
 #mainNav ul .icon {
   position: relative;
   margin-left: 0.2em;
 }
-/* line 589, main.scss */
+/* line 604, main.scss */
 #mainNav ul li {
   display: inline-block;
   line-height: 3.75em;
   color: #34495e;
 }
-/* line 595, main.scss */
+/* line 610, main.scss */
 #mainNav ul li a {
   border: none;
   font-weight: bold;
   color: inherit;
   padding: 0 1.25em;
 }
-/* line 603, main.scss */
+/* line 618, main.scss */
 #mainNav ul li:hover {
   background-color: #74d8f4;
 }
 
-/* line 612, main.scss */
+/* line 627, main.scss */
 #mainNav.slideUp {
   top: -3.75em;
 }
 
-/* line 616, main.scss */
+/* line 631, main.scss */
 #mainNav.slideDown {
   top: 0;
 }
 
-/* line 620, main.scss */
+/* line 635, main.scss */
 #sideNav {
   overflow-y: auto;
   background-color: #ecf0f1;
@@ -1220,29 +1238,29 @@ table tr.focus td, table tr.focus th {
   padding-top: 3.75em;
   z-index: 100;
 }
-/* line 631, main.scss */
+/* line 646, main.scss */
 #sideNav a {
   border: none;
   font-weight: bold;
   color: inherit;
 }
-/* line 638, main.scss */
+/* line 652, main.scss */
 #sideNav li {
   padding: 0 1.25em;
   font-size: 1em;
   line-height: 3.75em;
   color: #95a5a6;
 }
-/* line 645, main.scss */
+/* line 659, main.scss */
 #sideNav li.selected {
   color: #34495e;
 }
-/* line 649, main.scss */
+/* line 663, main.scss */
 #sideNav li:hover {
   background-color: rgba(189, 195, 199, 0.3);
   color: #34495e;
 }
-/* line 654, main.scss */
+/* line 668, main.scss */
 #sideNav .icon {
   padding-right: 0.4em;
   color: inherit;
